[gd_scene load_steps=13 format=3 uid="uid://cgagh8r0b4y2q"]

[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_8egg6"]
[ext_resource type="Script" path="res://Scenes/CommandProcessor.gd" id="2_0o73o"]
[ext_resource type="Script" path="res://Scenes/ScrollContainer.gd" id="2_5qb3l"]
[ext_resource type="FontFile" uid="uid://c882sooueipvc" path="res://Assets/Font/disket_mono_50.tres" id="3_1ck72"]
[ext_resource type="Script" path="res://Scripts/Input.gd" id="4_k1uyu"]
[ext_resource type="PackedScene" uid="uid://b2yvrwl8f8tqm" path="res://Scenes/background_fishing.tscn" id="6_jp7em"]
[ext_resource type="Script" path="res://Scenes/Fishing_rooms.gd" id="7_2pctx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ebp1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75yn8"]
bg_color = Color(0.0941176, 0.054902, 0.0156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wksy5"]
bg_color = Color(0.0941176, 0.054902, 0.0156863, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vqkcn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1wd5p"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8egg6")

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource("2_0o73o")

[node name="RoomManager" type="Node" parent="."]

[node name="MenuRoom" type="PanelContainer" parent="RoomManager"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5ebp1")
script = ExtResource("7_2pctx")
room_name = "MenuRoom"
room_description = "Hihihaha:"

[node name="MarginContainer" type="MarginContainer" parent="RoomManager/MenuRoom"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBucks" type="VBoxContainer" parent="RoomManager/MenuRoom/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameInfo" type="PanelContainer" parent="RoomManager/MenuRoom/MarginContainer/VBucks"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_75yn8")

[node name="Scroll" type="ScrollContainer" parent="RoomManager/MenuRoom/MarginContainer/VBucks/GameInfo"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("2_5qb3l")

[node name="HistoryRows" type="VBoxContainer" parent="RoomManager/MenuRoom/MarginContainer/VBucks/GameInfo/Scroll"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="InputArea" type="PanelContainer" parent="RoomManager/MenuRoom/MarginContainer/VBucks"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wksy5")

[node name="HBoxContainer" type="HBoxContainer" parent="RoomManager/MenuRoom/MarginContainer/VBucks/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="RoomManager/MenuRoom/MarginContainer/VBucks/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.860127, 0.582351, 0.276969, 1)
theme_override_fonts/font = ExtResource("3_1ck72")
theme_override_font_sizes/font_size = 50
text = " > "

[node name="Input" type="LineEdit" parent="RoomManager/MenuRoom/MarginContainer/VBucks/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.858824, 0.580392, 0.278431, 1)
theme_override_colors/font_outline_color = Color(0.582809, 0.240543, 0.924845, 1)
theme_override_fonts/font = ExtResource("3_1ck72")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_vqkcn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1wd5p")
placeholder_text = "Type go [location] to choose a destination"
max_length = 28
caret_blink_interval = 0.1
script = ExtResource("4_k1uyu")

[node name="PondRoom" parent="RoomManager" instance=ExtResource("6_jp7em")]
script = ExtResource("7_2pctx")
room_name = "Pond"

[connection signal="text_submitted" from="RoomManager/MenuRoom/MarginContainer/VBucks/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="RoomManager/MenuRoom/MarginContainer/VBucks/InputArea/HBoxContainer/Input" to="RoomManager/MenuRoom/MarginContainer/VBucks/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
